--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -27,7 +27,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSOWRD }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Provide permission to run mvnw
       run: chmod +x ./spring-boot-oauth2-social-login/mvnw
