--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -41,11 +41,11 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.ANGULAR_IMAGE_NAME }}:${{ github.sha }}
 
-    - name: Build and push Spring Boot Image
-      id: spring-boot-docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ./spring-boot-oauth2-social-login
-        file: ./spring-boot-oauth2-social-login/Dockerfile
-        push: true
-        tags:  ${{ secrets.DOCKER_USERNAME }}/${{ env.SPRING_BOOT_IMAGE_NAME }}:${{ github.sha }}
+#     - name: Build and push Spring Boot Image
+#       id: spring-boot-docker_build
+#       uses: docker/build-push-action@v2
+#       with:
+#         context: ./spring-boot-oauth2-social-login
+#         file: ./spring-boot-oauth2-social-login/Dockerfile
+#         push: true
+#         tags:  ${{ secrets.DOCKER_USERNAME }}/${{ env.SPRING_BOOT_IMAGE_NAME }}:${{ github.sha }}
